# ros2_qrcodereader

./: .gitignore  CMakeLists.txt  README.md  package.xml  t.sh
action/: ReadQRCode.action
build_aarch64/ros2_qrcodereader/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  qr_code_reader  qr_image_publisher  webcam_publisher
build_aarch64/ros2_qrcodereader/ament_cmake_core/: package.cmake
build_aarch64/ros2_qrcodereader/ament_cmake_environment_hooks/: local_setup.sh  package.dsv
build_aarch64/ros2_qrcodereader/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
install/: local_setup.sh  setup.sh
install/ros2_qrcodereader/lib/ros2_qrcodereader/: qr_code_reader  qr_image_publisher
install/ros2_qrcodereader/share/ros2_qrcodereader/: local_setup.sh  package.bash  package.sh  package.xml
install/ros2_qrcodereader/share/ros2_qrcodereader/src/: temp.py
install_aarch64/: local_setup.sh  setup.sh
install_aarch64/ros2_qrcodereader/lib/ros2_qrcodereader/: qr_code_reader  qr_image_publisher  webcam_publisher
install_aarch64/ros2_qrcodereader/share/ros2_qrcodereader/: package.dsv  package.ps1  package.sh  package.zsh
launch/: launch_qr_image_reader.launch.py  launch_qr_reader.launch.py  launch_webcam_qr_reader.launch.py
pixdebrouille_ws/src/navdubled/: CMakeLists.txt  package.xml
pixdebrouille_ws/src/navdubled/src/: navdubled.cpp
src/: color_reader.cpp  qr_code_reader.cpp  qr_image_publisher.cpp  webcam_publisher.cpp
(+7 files in other folders)
